# 0601-1083

./: pyproject.toml  requirements.txt
test_project/: check_report.json  operation_log.json  project_manifest.json  review_state.json
test_project/publish_pack/douyin_handoff_test/: README.md  asset_list.md  douyin_plan.json  douyin_plan.md  handoff_info.json  todo_list.md
test_project/publish_pack/douyin_handoff_test/metadata/: operation_log.json  operation_summary.md
test_project/publish_pack/final_test/03_captions/: demo_video.srt
test_project/publish_pack/final_test/05_metadata/: operation_log.json  pack_info.json  project_manifest.json  publish_info.md  todo_list.md
test_project/publish_pack/handoff_new/: README.md  asset_list.md  douyin_plan.json  douyin_plan.md  handoff_info.json  todo_list.md
test_project/publish_pack/handoff_new/metadata/: operation_log.json  operation_summary.md  todo_state.json
test_project/publish_pack/new_pack/05_metadata/: operation_log.json  pack_info.json  publish_info.md  todo_list.md
test_project/publish_plans/: all_plans.json  all_plans.md  platform_comparison.md
test_project/publish_plans/douyin/: douyin_plan.json  douyin_plan.md
test_project/publish_plans/xiaohongshu/: xiaohongshu_plan.json  xiaohongshu_plan.md
videocli/: __init__.py  cli.py  media.py  utils.py
videocli/commands/: caption_cmd.py  check_cmd.py  compare_cmd.py  cover_cmd.py  handoff_cmd.py  metadata_cmd.py  pack_cmd.py  publish_plan_cmd.py  review_cmd.py  scan_cmd.py  tag_cmd.py  todo_cmd.py  validate_cmd.py
(+54 files in other folders)
